Fixed cart sagas to correctly save the cartItems array upon sign out and sets the users cart from firebase upon sign in. Also fixed stretched images.

--- a/client/src/components/collection-item/collection-item.scss
+++ b/client/src/components/collection-item/collection-item.scss
@@ -25,7 +25,7 @@
     .image {
       width: 100%;
       height: 95%;
-      background-size: cover;
+      object-fit: cover;
       background-position: center;
       margin-bottom: 5px;
     }
